<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_to_your_account">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="input_email">input email…</string>
    <string name="input_password">input password…</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
</resources>